--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     font-family: Arial, sans-serif;
     color: #333;
-    background: linear-gradient(to right, #ff0080, #ff8c00, #ffe000, #00f6ff, #3b00ff);
+    background: linear-gradient(to right, #00c9a7, #92fe9d);
 }
 
 .profile-image {
